2003-03-15  Dave Jones <davej@codemonkey.org.uk>

	* module/x86/op_nmi.c: Remove stale debug code from yesterdays commit.

2003-03-15  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: add checking for existence of xmemdup()

	* libutil/Makefile.am:
	* libutil/op_string.h:
	* libutil/op_string.c: new, a few C string handling function

	* libutil/op_libiberty.h:
	* libutil/op_libiberty.c: xmemdup() new.

	* libop/op_events.h:
	* libop/op_events.c: tidy parser. Add op_free_events(). Fix minor
	  buglet.

	* dae/oprofiled.c:
	* daemon/oprofiled.c: fix memleak from parsing events files

	* gui/Makefile.am:
	* pp/Makefile.am: fix lib ordering, now libop depend on libutil

	* utils/op_help.c: error message if invalid cpu type. Fix op_help
	  when using timer interrupt.

2003-03-14  Andi Kleen <ak@suse.de>

	* module/x86/op_nmi.c: Fix another possible race condition.

2003-03-14  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libregex/stl.pat: support for rb tree, set/map, anonymous namespace.
	  Fix incorrect pattern for gcc 3.2. Handle 2.95 vector/string
	  iterator and a few stl free function handling. add all C++ base type.
	* libregex/mangled-name.txt: test for the above change

2003-03-14  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: gcc 2.91 warning work around

2003-03-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: fix a daemon segfault depending on the used
	  libc version, added 2003-03-04 (0.5.1 is ok)

2003-03-13  Dave Jones <davej@codmeonkey.org.uk>

	* events/x86-64.hammer.events: Remove duplicate minimum tag
	  from RETIRED_INSNS counter.

2003-03-11  John Levon  <levon@movementarian.org>

	* module/ia64/op_pmu.c: include op_arch.h not arch.h

2003-03-10  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: remove unsupported --warnnet, fix docbook root dir test
	* doc/oprofile.xml: typo

2003-03-10  John Levon  <levon@movementarian.org>

	* doc/Makefile.am:
	* configure.in: